구분자 /로 안 바뀐 부분 하나 수정

--- a/zeraf29/dddmap/dddmapeditor.html
+++ b/zeraf29/dddmap/dddmapeditor.html
@@ -26,7 +26,7 @@
 
         
         });
-        var tString="[mapsize],800,600//";
+        var tString="[mapsize],800,600/";
         var figure = 0;
 
         function clickRect() {
